--- a/18.html
+++ b/18.html
@@ -15,7 +15,7 @@
         
         
         <section>
-            <div class="bloc">
+            <div class="">
                 <p>Avez-vous 18 ans ?</p>
             </div>
             <div class="bloc">
