--- a/trombibiere.html
+++ b/trombibiere.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bières</title>
-    <link rel="stylesheet" href="trombibiere.css">
+    <link rel="stylesheet" href="public/css/trombibiere.css">
 </head>
 <body>
     <h1>Bières</h1>
@@ -14,6 +14,7 @@
         <img src="public/images/Originale.png"/>
     </div>
     <div class="Texte">
+        <h2>L'Originale</h2>
         <h3>En savoir plus !</h3>
     </div>
 
@@ -21,6 +22,7 @@
         <img src="public/images/Lady.png"/>
     </div>
     <div class="Texte">
+        <h2>Lady</h2>
         <h3>En savoir plus !</h3>
     </div>
 
@@ -28,6 +30,7 @@
         <img src="public/images/Triade.png"/>
     </div>
     <div class="Texte">
+        <h2>Triade</h2>
         <h3>En savoir plus !</h3>
     </div>
 
@@ -35,6 +38,7 @@
         <img src="public/images/Hermosa.png"/>
     </div>
     <div class="Texte">
+        <h2>Hermosa</h2>
         <h3>En savoir plus !</h3>
     </div>
 
@@ -42,6 +46,7 @@
         <img src="public/images/CaliforniaDream.png"/>
     </div>
     <div class="Texte">
+        <h2>CaliforniaDream</h2>
         <h3>En savoir plus !</h3>
     </div>
 
@@ -49,6 +54,7 @@
         <img src="public/images/1982.png"/>
     </div>
     <div class="Texte">
+        <h2>1982</h2>
         <h3>En savoir plus !</h3>
     </div>
 
@@ -56,6 +62,7 @@
         <img src="public/images/MarieMorgane.png"/>
     </div>
     <div class="Texte">
+        <h2>Marie-Morgane</h2>
         <h3>En savoir plus !</h3>
     </div>
 </div>
