--- a/18.html
+++ b/18.html
@@ -13,8 +13,8 @@
     <img class="background" src="/public/images/wawe.gif" alt="" srcset="">
     <main>
         
-        
-        <section>
+        <div id="custom-cursor">    </div>
+        <section id="">
             <div class="">
                 <p>Avez-vous 18 ans ?</p>
             </div>
@@ -25,8 +25,10 @@
                 <a href=""><p>Non..</p></a>
             </div>
         </section>
+
         <!-- <img src="/public/images/ove Surf (3).png" alt="fond" class="fond"> -->
     </main>
+    <script src="public/js/teste.js"></script>
 </body>
 
 </html>
