--- a/panier.html
+++ b/panier.html
@@ -5,15 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panier</title>
-    <link rel="stylesheet" type="text/css" href="headeretfooter.css">
-    <link rel="stylesheet" type="text/css" href="panier.css">
+    <link rel="stylesheet" type="text/css" href="public/css/panier.css">
 </head>
 
 <body>
     <main>
         <div class="vague">
-            <img id="un" src="vague_jaune.png">
-            <img id="deu" src="vague_jaune1.png">
+            <img id="un" src="public/images/vague_jaune.png">
+            <img id="deu" src="public/images/vague_jaune1.png">
             <!-- mettre 2 images pour faire toute la page  -->
         </div>
 
