--- a/Commejeveux.html
+++ b/Commejeveux.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/public/css/18ans.css">
-    <title>Vérification</title>
+    <title>Avez-Vous 18 étés ?</title>
 </head>
 
 <body>
-    <header><img src="/public/images/Mitch noir (1).png" alt="logo" class="logo"></header>
-    <img class="background" src="/public/images/wawe.gif" alt="" srcset="">
+    <header><img src="/public/images/MitchLogo.png" alt="logo" class="logo"></header>
+    <img class="background" src="/public/images/wawe.gif" alt="fond" srcset="">
     <main>
         
         <div id="custom-cursor">    </div>
